# copa_do_mundo_2026

./: .gitignore  CMakeLists.txt  Makefile  README.md
config/: game.cfg
docs/: Conceitos.md  StudyMe.md  criterios_avaliacao.txt  guia.md  roteiro_apresentacao.md
include/: AudioSystem.h  Game.h  GameInternal.h  Vec2.h
src/: AudioSystem.cpp  Game.cpp  GameInput.cpp  GameRender.cpp  GameSimulation.cpp  main.cpp
